tests/sources/invalid/match/match_unknown_variant.fire
// Invalid: the pattern references a variant that doesn't exist on the enum.
// EXPECT: semantic error

enum Shape {
    Circle(float64 radius),
    Point
}

Shape s = Shape.Point;
match s {  //~ ERROR FS-SEM-0001 @1
    Shape.Circle(radius) -> { }
    Shape.Triangle -> { }  //~ ERROR FS-SEM-0001 @5
}
